force-app/main/default/objects/Crew_Movement__c/Crew_Movement__c.object-meta.xml
<CustomObject>
    <label>Crew Movement</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>CM #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>