force-app/main/default/objects/Crew_Movement__c/fields/Accomodation_Details__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Details__c</fullName>
    <label>Accomodation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>