force-app/main/default/objects/Crew_Movement__c/fields/CCM__c.field-meta.xml
<CustomField>
    <fullName>CCM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCM #</label>
    <referenceTo>Crew_Change_Manifest__c</referenceTo>
    <relationshipLabel>Crew Movements</relationshipLabel>
    <relationshipName>Crew_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>