force-app/main/default/objects/Crew_Movement__c/fields/Crew_Change_LOCO__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_LOCO__c</fullName>
    <label>Crew Change Location</label>
    <type>TextArea</type>
</CustomField>