force-app/main/default/objects/Crew_Movement__c/fields/Fit_for_Work__c.field-meta.xml
<CustomField>
    <fullName>Fit_for_Work__c</fullName>
    <label>Fit for Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>