force-app/main/default/objects/Crew_Movement__c/fields/Higher_Duties__c.field-meta.xml
<CustomField>
    <fullName>Higher_Duties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Higher Duties</label>
    <type>Checkbox</type>
</CustomField>