force-app/main/default/objects/Crew_Movement__c/fields/Journey_Manager__c.field-meta.xml
<CustomField>
    <fullName>Journey_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Crew Movements (Journey Manager)</relationshipLabel>
    <relationshipName>Crew_Movements1</relationshipName>
    <type>Lookup</type>
</CustomField>