force-app/main/default/objects/Crew_Movement__c/fields/Licence_Check__c.field-meta.xml
<CustomField>
    <fullName>Licence_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licence Check</label>
    <type>Checkbox</type>
</CustomField>