force-app/main/default/objects/Crew_Movement__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Crew Movements</relationshipLabel>
    <relationshipName>Crew_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>