force-app/main/default/objects/Crew_Movement__c/fields/New_to_Position__c.field-meta.xml
<CustomField>
    <fullName>New_to_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New to Position</label>
    <type>Checkbox</type>
</CustomField>