force-app/main/default/objects/Crew_Movement__c/fields/New_To_Rig__c.field-meta.xml
<CustomField>
    <fullName>New_To_Rig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New To Rig/Camp</label>
    <type>Checkbox</type>
</CustomField>