force-app/main/default/objects/Crew_Movement__c/fields/Pick_Up_Point__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Point__c</fullName>
    <description>Location that crew is getting on the crew change plane or bus</description>
    <label>Pick Up Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>