force-app/main/default/objects/Crew_Movement__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Employment contract may be different position to position for hitch</inlineHelpText>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Crew Movements</relationshipLabel>
    <relationshipName>Crew_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>