force-app/main/default/objects/Crew_Movement__c/fields/Position_Employee__c.field-meta.xml
<CustomField>
    <fullName>Position_Employee__c</fullName>
    <formula>Name__r.PositionLookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position (Employee)</label>
    <type>Text</type>
</CustomField>