force-app/main/default/objects/Crew_Movement__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Shift (Crew Change In)</fullName>
            </value>
            <value>
                <fullName>Off Shift (Crew Change Out)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>