force-app/main/default/objects/Crew_Movement__c/fields/SMS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>SMS_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Confirmed</label>
    <type>Checkbox</type>
</CustomField>