force-app/main/default/objects/Crew_Movement__c/fields/Team_Unit__c.field-meta.xml
<CustomField>
    <fullName>Team_Unit__c</fullName>
    <formula>CCM__r.Team__r.Name &amp; 
IF(
  NOT(ISBLANK(CCM__r.Unit__r.Name)),
  &quot; | &quot; &amp; CCM__r.Unit__r.Name,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team &amp; Unit</label>
    <type>Text</type>
</CustomField>