force-app/main/default/objects/Crew_Movement__c/fields/Training_Deficiencies__c.field-meta.xml
<CustomField>
    <fullName>Training_Deficiencies__c</fullName>
    <label>Training Deficiencies</label>
    <type>TextArea</type>
</CustomField>