force-app/main/default/objects/Crew_Movement__c/fields/Travel_Accom_Charges_Apply__c.field-meta.xml
<CustomField>
    <fullName>Travel_Accom_Charges_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if costs apply to travel or accom booking.</description>
    <inlineHelpText>For Finance Department</inlineHelpText>
    <label>Travel/Accom - Charges Apply</label>
    <type>Checkbox</type>
</CustomField>