force-app/main/default/objects/Crew_Movement__c/fields/Travel_Details__c.field-meta.xml
<CustomField>
    <fullName>Travel_Details__c</fullName>
    <label>Travel Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>