force-app/main/default/objects/Crew_Movement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC In</fullName>
            </value>
            <value>
                <fullName>CC Out</fullName>
            </value>
            <value>
                <fullName>Infield Transfer</fullName>
            </value>
            <value>
                <fullName>Corporate Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>