force-app/main/default/objects/Crew_Movement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Position_Employee__c</columns>
    <columns>Type__c</columns>
    <columns>Travel_Details__c</columns>
    <columns>Accomodation_Details__c</columns>
    <columns>Pick_Up_Point__c</columns>
    <columns>Crew_Change_LOCO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCM__c</field>
        <operation>equals</operation>
        <value>CCM-15888</value>
    </filters>
    <label>By CCM</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Rig_24</group>
    </sharedTo>
</ListView>