force-app/main/default/objects/Crew_Movement__c/listViews/Search.listView-meta.xml
<ListView>
    <fullName>Search</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Position_Employee__c</columns>
    <columns>Pick_Up_Point__c</columns>
    <columns>Travel_Details__c</columns>
    <columns>Accomodation_Details__c</columns>
    <columns>Notes__c</columns>
    <columns>Travel_Accom_Charges_Apply__c</columns>
    <columns>CCM__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Team_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>equals</operation>
        <value>Isaiah Benedito</value>
    </filters>
    <label>Search</label>
</ListView>